# googl-haskell

./: googl.cabal
src/: Googl.hs
