name:                googl
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Googl
  build-depends:
    base >= 4.6 && < 4.9,
    aeson,
    api-builder,
    text
  hs-source-dirs: src/
  default-language: Haskell2010
  default-extensions:
    GeneralizedNewtypeDeriving
    OverloadedStrings
  ghc-options: -Wall
